--- a/res/xml/config.xml
+++ b/res/xml/config.xml
@@ -36,6 +36,8 @@
     <preference name="useBrowserHistory" value="true" />
     <preference name="exit-on-suspend" value="false" />
 <plugins>
+    
+    <plugin name="EmailComposer" value="org.apache.cordova.EmailComposer"/>
     <plugin name="App" value="org.apache.cordova.App"/>
     <plugin name="Geolocation" value="org.apache.cordova.GeoBroker"/>
     <plugin name="Device" value="org.apache.cordova.Device"/>
@@ -55,7 +57,6 @@
     <plugin name="Echo" value="org.apache.cordova.Echo" />
     <plugin name="Globalization" value="org.apache.cordova.Globalization"/>
     <plugin name="InAppBrowser" value="org.apache.cordova.InAppBrowser"/>
-    <plugin name="WebIntent" value="com.borismus.webintent.WebIntent" />
 </plugins>
 </cordova>
 
